# autohack

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  commands_catalog.json  example_report.md  main.py  nikto_report.txt  pyproject.toml  requirements.txt  xssnow-filtered-payloads-2026-04-12T11-07-56-686Z.txt
api/: __init__.py  server.py
catalog/: __init__.py  binary.json  cloud.json  diagnostic.json  elastic.json  forensics.json  json_export.json  network.json  passwords.json  post_exploit.json  privoxy.json  recon.json  scrapy.json  system.json  tor.json  web_attack.json  xss.json
config/: settings.py  version.py
core/: approval_queue.py  audit_chain.py  catalog.py  catalog_diff.py  catalog_schema.py  catalog_signature.py  catalog_source.py  cheatsheet_importer.py  cheatsheet_policy.py  checker.py  cli_commands.py  cli_runtime.py  command_allowlist.py  command_builder.py  config_manager.py  env_profiles.py  executor.py  exporter.py  favorites.py  i18n.py  installer.py  logger.py  loot.py  metrics.py  packs.py  palette.py  paths.py  playbook.py  rbac.py  secure_storage.py  session_history.py  session_replay.py  theme.py  variables.py
docs/: cheatsheet-policy.md  external-cheatsheets.md  hardening.md
menus/: base.py  binary.py  cidr_menu.py  cloud.py  command_builder_menu.py  config_menu.py  dependencies.py  diagnostic.py  elastic.py  encoder_menu.py  environment.py  export_all.py  favorites_menu.py  forensics.py  hash_id_menu.py  help_menu.py  json_export.py  jwt_menu.py  loot_menu.py  main_menu.py  network.py  passwords.py  port_ref_menu.py  post_exploit.py  privoxy.py  recon.py  report_menu.py  revshell_menu.py  run_all_checks.py  scrapy_menu.py  search.py  target_workspace_menu.py  toolbox_menu.py  tor.py  variables_menu.py  web_attack.py  wordlist_menu.py  xss_menu.py
scripts/: build_binary.sh  build_catalog.py  import_cheatsheets.py  sign_catalog.py  validate_catalog_schema.py  verify_execution_chain.py
tests/: test_allowlist.py  test_approval_queue.py  test_audit_chain.py  test_base_menu.py  test_build_catalog.py  (+26 more)
(+6 files in other folders)
