[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autohack-lab-commander"
dynamic = ["version"]
description = "Terminal application for organizing, searching, documenting, and running security lab commands."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "SonFire03" }
]
dependencies = [
  "rich",
  "pyperclip",
  "fastapi",
  "uvicorn"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "pexpect",
  "pyinstaller"
]

[project.scripts]
autohack = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["config*", "core*", "menus*"]

[tool.setuptools.dynamic]
version = { attr = "config.version.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["config", "core", "menus"]
omit = [
  "tests/*"
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 40
exclude_lines = [
  "if __name__ == .__main__.:",
  "pragma: no cover"
]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [
  "exports",
  "logs",
  ".venv"
]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "B"
]
ignore = [
  "E501"
]
